--- a/index.html
+++ b/index.html
@@ -3,24 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-
-    <ul>
-        <li><a href="recipes/homemade-sabich.html">Homemade Sabich</a></li>
-        <li><a href="recipes/kai-jeow.html">Kai Jeow</a></li>
-        <li><a href="recipes/philly-cheesesteak.html">Philly Cheesesteak</a></li>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-        <h1>Odin Recipes</h1>
-    </ul>
-        
+<h1>Odin Recipes</h1>
+    <div class="flex-container">
+        <div class="one"> <a href="recipes/homemade-sabich.html">Homemade Sabich</a></div>
+        <div class="two"> <a href="recipes/kai-jeow.html">Kai Jeow</a></div>
+        <div class="three"> <a href="recipes/philly-cheesesteak.html">Philly Cheesesteak</a></div>
+    </div>
+    
     </body>
 </html>
