--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-<h1>Odin Recipes</h1>
+<h1>Odin Recipes Apple iPhone 15 Pro Max</h1>
     <div class="container">
         <div class="item"> <a href="recipes/homemade-sabich.html">Homemade Sabich</a></div>
         <div class="item"> <a href="recipes/kai-jeow.html">Kai Jeow</a></div>
